--- a/TypeScriptApp/IonicApp.csproj
+++ b/TypeScriptApp/IonicApp.csproj
@@ -51,59 +51,10 @@
   <ItemGroup>
     <Folder Include="Properties\" />
     <Folder Include="src\ResponsiveTable\" />
+    <Folder Include="www\assets\icon\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="config.xml" />
-    <Content Include="resources\android\icon\drawable-hdpi-icon.png" />
-    <Content Include="resources\android\icon\drawable-ldpi-icon.png" />
-    <Content Include="resources\android\icon\drawable-mdpi-icon.png" />
-    <Content Include="resources\android\icon\drawable-xhdpi-icon.png" />
-    <Content Include="resources\android\icon\drawable-xxhdpi-icon.png" />
-    <Content Include="resources\android\icon\drawable-xxxhdpi-icon.png" />
-    <Content Include="resources\android\splash\drawable-land-hdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-land-ldpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-land-mdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-land-xhdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-land-xxhdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-land-xxxhdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-hdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-ldpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-mdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-xhdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-xxhdpi-screen.png" />
-    <Content Include="resources\android\splash\drawable-port-xxxhdpi-screen.png" />
-    <Content Include="resources\icon.png" />
-    <Content Include="resources\ios\icon\icon%402x.png" />
-    <Content Include="resources\ios\icon\icon-40%402x.png" />
-    <Content Include="resources\ios\icon\icon-40%403x.png" />
-    <Content Include="resources\ios\icon\icon-40.png" />
-    <Content Include="resources\ios\icon\icon-50%402x.png" />
-    <Content Include="resources\ios\icon\icon-50.png" />
-    <Content Include="resources\ios\icon\icon-60%402x.png" />
-    <Content Include="resources\ios\icon\icon-60%403x.png" />
-    <Content Include="resources\ios\icon\icon-60.png" />
-    <Content Include="resources\ios\icon\icon-72%402x.png" />
-    <Content Include="resources\ios\icon\icon-72.png" />
-    <Content Include="resources\ios\icon\icon-76%402x.png" />
-    <Content Include="resources\ios\icon\icon-76.png" />
-    <Content Include="resources\ios\icon\icon-83.5%402x.png" />
-    <Content Include="resources\ios\icon\icon-small%402x.png" />
-    <Content Include="resources\ios\icon\icon-small%403x.png" />
-    <Content Include="resources\ios\icon\icon-small.png" />
-    <Content Include="resources\ios\icon\icon.png" />
-    <Content Include="resources\ios\splash\Default%402x~iphone.png" />
-    <Content Include="resources\ios\splash\Default-568h%402x~iphone.png" />
-    <Content Include="resources\ios\splash\Default-667h.png" />
-    <Content Include="resources\ios\splash\Default-736h.png" />
-    <Content Include="resources\ios\splash\Default-Landscape%402x~ipad.png" />
-    <Content Include="resources\ios\splash\Default-Landscape%40~ipadpro.png" />
-    <Content Include="resources\ios\splash\Default-Landscape-736h.png" />
-    <Content Include="resources\ios\splash\Default-Landscape~ipad.png" />
-    <Content Include="resources\ios\splash\Default-Portrait%402x~ipad.png" />
-    <Content Include="resources\ios\splash\Default-Portrait%40~ipadpro.png" />
-    <Content Include="resources\ios\splash\Default-Portrait~ipad.png" />
-    <Content Include="resources\ios\splash\Default~iphone.png" />
-    <Content Include="resources\splash.png" />
     <Content Include="src\index.html" />
     <Content Include="e2e\tsconfig.json" />
     <Content Include="src\service-worker.js" />
@@ -114,9 +65,6 @@
     <Content Include="test-config\protractor.conf.js" />
     <Content Include="test-config\webpack.test.js" />
     <Content Include="wallaby.js" />
-    <Content Include="www\assets\fonts\fontawesome-webfont.svg" />
-    <Content Include="www\assets\fonts\ionicons.svg" />
-    <Content Include="www\assets\icon\favicon.ico" />
     <Content Include="www\build\main.css" />
     <Content Include="www\build\main.js" />
     <Content Include="www\build\polyfills.js" />
@@ -124,11 +72,6 @@
     <Content Include="www\build\vendor.js" />
     <Content Include="www\index.html" />
     <Content Include="www\service-worker.js" />
-    <Content Include="www\assets\fonts\fontawesome-webfont.eot" />
-    <Content Include="www\assets\fonts\fontawesome-webfont.ttf" />
-    <Content Include="www\assets\fonts\fontawesome-webfont.woff" />
-    <Content Include="www\assets\fonts\fontawesome-webfont.woff2" />
-    <Content Include="www\assets\fonts\FontAwesome.otf" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".editorconfig" />
@@ -140,29 +83,6 @@
     <Content Include="src\manifest.json" />
     <Content Include="tsconfig.json" />
     <Content Include="tslint.json" />
-    <Content Include="www\assets\fonts\ionicons.eot" />
-    <Content Include="www\assets\fonts\ionicons.scss" />
-    <Content Include="www\assets\fonts\ionicons.ttf" />
-    <Content Include="www\assets\fonts\ionicons.woff" />
-    <Content Include="www\assets\fonts\ionicons.woff2" />
-    <Content Include="www\assets\fonts\noto-sans-bold.ttf" />
-    <Content Include="www\assets\fonts\noto-sans-bold.woff" />
-    <Content Include="www\assets\fonts\noto-sans-regular.ttf" />
-    <Content Include="www\assets\fonts\noto-sans-regular.woff" />
-    <Content Include="www\assets\fonts\noto-sans.scss" />
-    <Content Include="www\assets\fonts\roboto-bold.ttf" />
-    <Content Include="www\assets\fonts\roboto-bold.woff" />
-    <Content Include="www\assets\fonts\roboto-bold.woff2" />
-    <Content Include="www\assets\fonts\roboto-light.ttf" />
-    <Content Include="www\assets\fonts\roboto-light.woff" />
-    <Content Include="www\assets\fonts\roboto-light.woff2" />
-    <Content Include="www\assets\fonts\roboto-medium.ttf" />
-    <Content Include="www\assets\fonts\roboto-medium.woff" />
-    <Content Include="www\assets\fonts\roboto-medium.woff2" />
-    <Content Include="www\assets\fonts\roboto-regular.ttf" />
-    <Content Include="www\assets\fonts\roboto-regular.woff" />
-    <Content Include="www\assets\fonts\roboto-regular.woff2" />
-    <Content Include="www\assets\fonts\roboto.scss" />
     <Content Include="www\build\main.css.map" />
     <Content Include="www\build\main.js.map" />
     <Content Include="www\build\vendor.js.map" />
